syntax = "proto3";
package service;

import "service/login/client_info.proto";
import "service/login/status.proto";

service LoginService {

  rpc signIn (service.login.ClientInfo) returns (service.login.Status);
  rpc signUp (service.login.ClientInfo) returns (service.login.Status);
  rpc changeInfo (service.login.ClientInfo) returns (service.login.Status);

}